--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,11 @@ uvicorn[standard]==0.27.0
 python-jose[cryptography]==3.3.0
 
 # Password Hashing
-passlib[bcrypt]==1.7.4
+passlib==1.7.4
+bcrypt==4.0.1
 
 # OAuth2 Password Flow Forms
 python-multipart==0.0.6
+
+# Environment Variables
+python-dotenv==1.0.0
